...
        android:layout_marginTop="36dp"
        android:text="What's your email?"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        android:fontFamily="@font/questrial"
        app:layout_constraintBottom_toTopOf="@+id/edittext_emailEmployer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.34"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_employerSignUp"
        app:layout_constraintVertical_bias="1.0" />

...
        android:layout_height="wrap_content"
        android:text="Create a password"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        android:fontFamily="@font/questrial"
        app:layout_constraintBottom_toTopOf="@+id/edittext_passwordEmployer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.181"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_employerSignUp"
        app:layout_constraintVertical_bias="1.0" />

...
        android:layout_marginTop="196dp"
        android:text="Desired Username (Company Name)"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        android:fontFamily="@font/questrial"
        app:layout_constraintBottom_toTopOf="@+id/edittext_usernameEmployer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.337"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_employerSignUp"
        app:layout_constraintVertical_bias="1.0" />

...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Month"
        android:textColor="#000000"
        android:textSize="14sp"
        android:fontFamily="@font/questrial"
        app:layout_constraintBottom_toTopOf="@+id/edittext_monthEmployer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.134"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_dobEmployer"
        app:layout_constraintVertical_bias="1.0" />

...
        android:id="@+id/textview_dayEmployer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Day"
        android:textColor="#000000"
        android:fontFamily="@font/questrial"
        app:layout_constraintBottom_toTopOf="@+id/edittext_dayEmployer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.385"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_dobEmployer"
        app:layout_constraintVertical_bias="1.0" />

...
        android:id="@+id/textview_yearEmployer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Year"
        android:fontFamily="@font/questrial"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/edittext_yearEmployer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.65"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_dobEmployer"
        app:layout_constraintVertical_bias="1.0" />

...
        android:layout_width="305dp"
        android:layout_height="28dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="4dp"
        android:orientation="horizontal"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/button_signUpEmployer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_genderEmployer">

        <RadioButton
...
