<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".SubmitTaskActivity">

    <TextView
        android:id="@+id/textview_quickCash6"
        android:layout_width="347dp"
        android:layout_height="76dp"
        android:background="#00d3a9"
        android:fontFamily="@font/questrial"
        android:gravity="center"
        android:text="Quick Cash"
        android:textColor="#FFFFFF"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.061" />

    <TextView
        android:id="@+id/textview_taskTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/questrial"
        android:text="Task title:"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/edittext_taskTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.136"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_quickCash6"
        app:layout_constraintVertical_bias="0.766" />

    <EditText
        android:id="@+id/edittext_taskTitle"
        android:layout_width="246dp"
        android:layout_height="38dp"
        android:backgroundTint="#000000"
        android:ems="10"
        android:fontFamily="@font/questrial"
        android:hint="Enter task title"
        android:inputType="textPersonName"
        android:textColor="#000000"
        android:textColorHint="@color/hintHighlight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.284"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_quickCash6"
        app:layout_constraintVertical_bias="0.083" />

    <TextView
        android:id="@+id/textview_taskDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/questrial"
        android:text="Task description:"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/edittextmulti_taskDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.161"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittext_taskTitle"
        app:layout_constraintVertical_bias="0.555" />

    <EditText
        android:id="@+id/edittextmulti_taskDescription"
        android:layout_width="315dp"
        android:layout_height="157dp"
        android:backgroundTint="#000000"
        android:ems="10"
        android:fontFamily="@font/questrial"
        android:gravity="start|top"
        android:hint="Enter task description"
        android:inputType="textMultiLine"
        android:textColor="#000000"
        android:textColorHint="@color/hintHighlight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittext_taskTitle"
        app:layout_constraintVertical_bias="0.123" />

    <TextView
        android:id="@+id/textview_taskPayment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/questrial"
        android:text="Task payment amount:"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/edittext_taskPayment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.189"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittextmulti_taskDescription"
        app:layout_constraintVertical_bias="0.922" />

    <EditText
        android:id="@+id/edittext_taskPayment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="530dp"
        android:layout_marginBottom="156dp"
        android:backgroundTint="#000000"
        android:ems="10"
        android:fontFamily="@font/questrial"
        android:hint="Enter amount $"
        android:inputType="textPersonName"
        android:textColor="#000000"
        android:textColorHint="@color/hintHighlight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.214"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/button_submitTask"
        android:layout_width="204dp"
        android:layout_height="68dp"
        android:backgroundTint="#00d3a9"
        android:fontFamily="@font/questrial"
        android:text="Submit Task"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="22sp"
        android:textStyle="bold"
        app:cornerRadius="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittext_taskPayment"
        app:layout_constraintVertical_bias="0.321"
        app:strokeColor="#FFFFFF"
        app:strokeWidth="3sp" />

    <TextView
        android:id="@+id/TaskTags"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="47dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="290dp"
        android:text="Task tags:"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        android:fontFamily="@font/questrial"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittextmulti_taskDescription" />

    <Spinner
        android:id="@+id/tagList"
        android:layout_width="307dp"
        android:layout_height="32dp"
        android:layout_marginStart="51dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="53dp"
        android:layout_marginBottom="26dp"
        android:backgroundTint="#000000"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/textview_taskPayment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TaskTags"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editText_lat"
        android:layout_width="72dp"
        android:layout_height="40dp"
        android:ems="10"
        android:hint="Lat"
        android:inputType="text"
        android:textColor="#000000"
        android:textColorHint="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.905"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.71" />

    <EditText
        android:id="@+id/editText_lng"
        android:layout_width="72dp"
        android:layout_height="40dp"
        android:ems="10"
        android:hint="Lng"
        android:inputType="text"
        android:textColor="#000000"
        android:textColorHint="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.905"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8" />

    <TextView
        android:id="@+id/tasklocation"
        android:layout_width="88dp"
        android:layout_height="22dp"
        android:text="Location"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.907"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.661" />

</androidx.constraintlayout.widget.ConstraintLayout>